// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsSupportPage should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#userInfographic_svg__a)"
              >
                <mask
                  height="80"
                  id="userInfographic_svg__b"
                  maskUnits="userSpaceOnUse"
                  style="mask-type: alpha;"
                  width="80"
                  x="0"
                  y="0"
                >
                  <ellipse
                    fill="#C4C4C4"
                    rx="39.978"
                    ry="40"
                    transform="matrix(1 0 .00055 1 40 40)"
                  />
                </mask>
                <g
                  mask="url(#userInfographic_svg__b)"
                >
                  <path
                    d="M0 0h79.956v80H0V0Z"
                    fill="#d8dee4"
                  />
                  <path
                    d="M19.99 75.5c0-8.423 6.595-13.399 10.468-16.97 3.154-2.907 9.8-4.333 11.197-3.81 2.514-3.312 5.728-6.72 5.728-6.72s5.71 1.059 9.216 6.563a.25.25 0 0 1 .026-.033c.786-.843 2.684-.324 6.944 1.438 4.73 1.956 6.564 5.617 8.197 8.876.389.777.766 1.53 1.169 2.233a84.494 84.494 0 0 0 2.024 3.345 38.902 38.902 0 0 1-25.886 11.532c-10.753.516-21.698.232-29.084-6.454Z"
                    fill="#798da1"
                  />
                  <path
                    d="M32.452 80c-.835-.281-1.658-.172-2.468-.5 1.499-5 5.497-10.5 5.497-10.5s-2.896 6.5-3.029 11ZM67.963 74.133c-.707.378-1.427.737-2.16 1.078-.678-4.289-2.358-8.286-2.358-8.286s2.47 3.707 4.518 7.208ZM50.459 60.541c4.363-.194 7.765-2.932 7.598-6.116-.166-3.184-3.837-5.608-8.2-5.414-4.363.194-8.046 2.805-7.88 5.989.166 3.184 4.12 5.735 8.482 5.541Z"
                    fill="#9faebc"
                  />
                </g>
                <path
                  d="M29.013 32.248c-.97 1.04-1.54 2.5-1.464 4.09.144 2.992 2.524 5.308 5.315 5.173.108-.005.216-.014.323-.026 2.107 6.702 6.8 15.136 17.039 14.642 11.387-.548 15.634-9.085 16.97-16.618 2.465-.464 4.272-2.83 4.14-5.584a5.65 5.65 0 0 0-1.241-3.294c-.668 1.574-2.454.939-3.097-.577-.543-1.28-.63-2.62-.715-3.966-.114-1.765-.227-3.538-1.376-5.191-3.43-4.933-6.214-4.247-10.644-3.156-1.512.372-3.216.791-5.203 1.05-6.109.798-12.218-2.375-12.218-2.375s-4.377 6.35-3.714 16.312c.153 2.309-2.752 2.387-4.115-.48Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M40.72 26.582c-.5.083-1.096.181-1.069-.298.189-3.32 7.522-2.032 6.477-.092-.218.404-.763.127-1.337-.166-.395-.202-.805-.41-1.13-.408-1.363.013-1.76.314-2.115.581-.217.164-.418.316-.814.381l-.013.002ZM59.002 24.506c1.147-.127 2.804.276 3.305 1.213.25.47.039.637-.58.81-.53.15-.881-.042-1.265-.251a5.365 5.365 0 0 0-.356-.183 2.998 2.998 0 0 0-1.49-.245c-.298.027-.498.11-.713.2a3.39 3.39 0 0 1-.579.195c-.35.08-.802.135-.823-.166-.07-.985 1.54-1.466 2.5-1.573ZM60.685 28.792a1.736 1.736 0 0 0-.264-.123c-3.074-1.13-4.118 3.745-1.873 4.536 3.24 1.142 4.062-3.313 2.137-4.413ZM43.452 28.669c.093.034.18.075.264.123 1.924 1.1 1.102 5.555-2.138 4.413-2.244-.791-1.201-5.665 1.874-4.536Z"
                  fill="#506478"
                />
                <path
                  d="M60.306 29.332c-.341-.324-.99-.036-.898.404.047.225.092.404.3.557.316.234.95-.04.924-.412-.017-.243-.149-.38-.326-.55Z"
                  fill="#fff"
                />
                <path
                  d="M42.99 44.254s7.57 4.518 13.34 1.19c-3.13 4.518-11.581 3.826-13.34-1.19Z"
                  fill="#506478"
                />
                <path
                  d="M43.336 29.332c-.341-.324-.99-.036-.898.404.048.224.093.404.3.557.316.234.95-.04.924-.413-.017-.242-.149-.38-.326-.548Z"
                  fill="#fff"
                />
                <path
                  d="M33.646 8.329C37.884 2.193 46.823.762 54.908 2.278c4.577.858 19.606 6.05 15.308 14.859.25 2.639.392 5.3.394 7.952.002 1.685.033 3.496-.383 5.143-.522 2.064-2.538 1.453-3.23-.178-1.255-2.961-.066-6.245-2.09-9.157-4.6-6.617-8.041-3.124-15.847-2.106-6.11.797-12.218-2.375-12.218-2.375s-4.377 6.35-3.715 16.311c.21 3.143-5.247 2.153-4.77-4.768.477-6.92-1.175-19.01 5.289-19.63Z"
                  fill="#506478"
                />
                <path
                  d="M33.51 59.2a19.595 19.595 0 0 1-2.774-.664c-6.439-2.063-10.15-7.283-11.459-14.063-.124-.642-1.044-.626-1.146.02-1.245 7.927-5.753 13.596-13.67 15.224-.63.13-.613 1.049.021 1.156 7.895 1.333 12.678 6.829 14.194 14.645.095.492.611.485.582.474a.584.584 0 0 0 .564-.496c.631-4.055 2.506-9.582 7.854-12.883 1.709-1.053 3.679-1.813 5.855-2.257a.586.586 0 0 0 .467-.587.587.587 0 0 0-.488-.57Z"
                  fill="#7e9bfa"
                />
                <path
                  d="M26.327 24.799a6.19 6.19 0 0 1-.869-.206c-2.018-.64-3.18-2.26-3.59-4.364-.04-.2-.328-.194-.36.006-.39 2.46-1.804 4.22-4.285 4.726-.197.04-.192.326.006.359 2.475.413 3.973 2.119 4.448 4.545.03.152.192.15.183.147a.182.182 0 0 0 .176-.154c.198-1.259.786-2.974 2.463-4a5.657 5.657 0 0 1 1.835-.7.182.182 0 0 0-.007-.359Z"
                  fill="#798da1"
                />
                <path
                  d="M18.64 34.484a9.707 9.707 0 0 1-1.362-.323c-3.165-1.004-4.989-3.544-5.632-6.845-.06-.312-.513-.304-.563.01-.613 3.859-2.83 6.62-6.721 7.412-.31.063-.302.51.01.563 3.88.648 6.231 3.323 6.976 7.128.047.24.3.236.286.23a.286.286 0 0 0 .277-.24c.31-1.975 1.233-4.665 3.862-6.273.84-.513 1.808-.883 2.878-1.099a.286.286 0 0 0-.01-.563Z"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="userInfographic_svg__a"
                >
                  <path
                    d="M0 0h80v80H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            In addition we have provided comprehensive documentation on using the AppMarket at the below link.
          </mock-styled.p>
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            View Docs
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.div
            classname="el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mb11"
          >
            <mock-styled.span
              classname="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.input
              placeholder="Search by App or Developer"
              type="text"
            />
          </mock-styled.div>
          <mock-styled.div
            classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname="el-icon-new"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </div>
            <div
              class="el-pn-content"
            >
              Search for an app or developer name to get support contact details
            </div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#userInfographic_svg__a)"
            >
              <mask
                height="80"
                id="userInfographic_svg__b"
                maskUnits="userSpaceOnUse"
                style="mask-type: alpha;"
                width="80"
                x="0"
                y="0"
              >
                <ellipse
                  fill="#C4C4C4"
                  rx="39.978"
                  ry="40"
                  transform="matrix(1 0 .00055 1 40 40)"
                />
              </mask>
              <g
                mask="url(#userInfographic_svg__b)"
              >
                <path
                  d="M0 0h79.956v80H0V0Z"
                  fill="#d8dee4"
                />
                <path
                  d="M19.99 75.5c0-8.423 6.595-13.399 10.468-16.97 3.154-2.907 9.8-4.333 11.197-3.81 2.514-3.312 5.728-6.72 5.728-6.72s5.71 1.059 9.216 6.563a.25.25 0 0 1 .026-.033c.786-.843 2.684-.324 6.944 1.438 4.73 1.956 6.564 5.617 8.197 8.876.389.777.766 1.53 1.169 2.233a84.494 84.494 0 0 0 2.024 3.345 38.902 38.902 0 0 1-25.886 11.532c-10.753.516-21.698.232-29.084-6.454Z"
                  fill="#798da1"
                />
                <path
                  d="M32.452 80c-.835-.281-1.658-.172-2.468-.5 1.499-5 5.497-10.5 5.497-10.5s-2.896 6.5-3.029 11ZM67.963 74.133c-.707.378-1.427.737-2.16 1.078-.678-4.289-2.358-8.286-2.358-8.286s2.47 3.707 4.518 7.208ZM50.459 60.541c4.363-.194 7.765-2.932 7.598-6.116-.166-3.184-3.837-5.608-8.2-5.414-4.363.194-8.046 2.805-7.88 5.989.166 3.184 4.12 5.735 8.482 5.541Z"
                  fill="#9faebc"
                />
              </g>
              <path
                d="M29.013 32.248c-.97 1.04-1.54 2.5-1.464 4.09.144 2.992 2.524 5.308 5.315 5.173.108-.005.216-.014.323-.026 2.107 6.702 6.8 15.136 17.039 14.642 11.387-.548 15.634-9.085 16.97-16.618 2.465-.464 4.272-2.83 4.14-5.584a5.65 5.65 0 0 0-1.241-3.294c-.668 1.574-2.454.939-3.097-.577-.543-1.28-.63-2.62-.715-3.966-.114-1.765-.227-3.538-1.376-5.191-3.43-4.933-6.214-4.247-10.644-3.156-1.512.372-3.216.791-5.203 1.05-6.109.798-12.218-2.375-12.218-2.375s-4.377 6.35-3.714 16.312c.153 2.309-2.752 2.387-4.115-.48Z"
                fill="#FFE5C7"
              />
              <path
                d="M40.72 26.582c-.5.083-1.096.181-1.069-.298.189-3.32 7.522-2.032 6.477-.092-.218.404-.763.127-1.337-.166-.395-.202-.805-.41-1.13-.408-1.363.013-1.76.314-2.115.581-.217.164-.418.316-.814.381l-.013.002ZM59.002 24.506c1.147-.127 2.804.276 3.305 1.213.25.47.039.637-.58.81-.53.15-.881-.042-1.265-.251a5.365 5.365 0 0 0-.356-.183 2.998 2.998 0 0 0-1.49-.245c-.298.027-.498.11-.713.2a3.39 3.39 0 0 1-.579.195c-.35.08-.802.135-.823-.166-.07-.985 1.54-1.466 2.5-1.573ZM60.685 28.792a1.736 1.736 0 0 0-.264-.123c-3.074-1.13-4.118 3.745-1.873 4.536 3.24 1.142 4.062-3.313 2.137-4.413ZM43.452 28.669c.093.034.18.075.264.123 1.924 1.1 1.102 5.555-2.138 4.413-2.244-.791-1.201-5.665 1.874-4.536Z"
                fill="#506478"
              />
              <path
                d="M60.306 29.332c-.341-.324-.99-.036-.898.404.047.225.092.404.3.557.316.234.95-.04.924-.412-.017-.243-.149-.38-.326-.55Z"
                fill="#fff"
              />
              <path
                d="M42.99 44.254s7.57 4.518 13.34 1.19c-3.13 4.518-11.581 3.826-13.34-1.19Z"
                fill="#506478"
              />
              <path
                d="M43.336 29.332c-.341-.324-.99-.036-.898.404.048.224.093.404.3.557.316.234.95-.04.924-.413-.017-.242-.149-.38-.326-.548Z"
                fill="#fff"
              />
              <path
                d="M33.646 8.329C37.884 2.193 46.823.762 54.908 2.278c4.577.858 19.606 6.05 15.308 14.859.25 2.639.392 5.3.394 7.952.002 1.685.033 3.496-.383 5.143-.522 2.064-2.538 1.453-3.23-.178-1.255-2.961-.066-6.245-2.09-9.157-4.6-6.617-8.041-3.124-15.847-2.106-6.11.797-12.218-2.375-12.218-2.375s-4.377 6.35-3.715 16.311c.21 3.143-5.247 2.153-4.77-4.768.477-6.92-1.175-19.01 5.289-19.63Z"
                fill="#506478"
              />
              <path
                d="M33.51 59.2a19.595 19.595 0 0 1-2.774-.664c-6.439-2.063-10.15-7.283-11.459-14.063-.124-.642-1.044-.626-1.146.02-1.245 7.927-5.753 13.596-13.67 15.224-.63.13-.613 1.049.021 1.156 7.895 1.333 12.678 6.829 14.194 14.645.095.492.611.485.582.474a.584.584 0 0 0 .564-.496c.631-4.055 2.506-9.582 7.854-12.883 1.709-1.053 3.679-1.813 5.855-2.257a.586.586 0 0 0 .467-.587.587.587 0 0 0-.488-.57Z"
                fill="#7e9bfa"
              />
              <path
                d="M26.327 24.799a6.19 6.19 0 0 1-.869-.206c-2.018-.64-3.18-2.26-3.59-4.364-.04-.2-.328-.194-.36.006-.39 2.46-1.804 4.22-4.285 4.726-.197.04-.192.326.006.359 2.475.413 3.973 2.119 4.448 4.545.03.152.192.15.183.147a.182.182 0 0 0 .176-.154c.198-1.259.786-2.974 2.463-4a5.657 5.657 0 0 1 1.835-.7.182.182 0 0 0-.007-.359Z"
                fill="#798da1"
              />
              <path
                d="M18.64 34.484a9.707 9.707 0 0 1-1.362-.323c-3.165-1.004-4.989-3.544-5.632-6.845-.06-.312-.513-.304-.563.01-.613 3.859-2.83 6.62-6.721 7.412-.31.063-.302.51.01.563 3.88.648 6.231 3.323 6.976 7.128.047.24.3.236.286.23a.286.286 0 0 0 .277-.24c.31-1.975 1.233-4.665 3.862-6.273.84-.513 1.808-.883 2.878-1.099a.286.286 0 0 0-.01-.563Z"
                fill="#fff"
              />
            </g>
            <defs>
              <clippath
                id="userInfographic_svg__a"
              >
                <path
                  d="M0 0h80v80H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          In addition we have provided comprehensive documentation on using the AppMarket at the below link.
        </mock-styled.p>
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          View Docs
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.div
          classname="el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mb11"
        >
          <mock-styled.span
            classname="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.input
            placeholder="Search by App or Developer"
            type="text"
          />
        </mock-styled.div>
        <mock-styled.div
          classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="el-icon-new"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </div>
          <div
            class="el-pn-content"
          >
            Search for an app or developer name to get support contact details
          </div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsSupportPage should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#userInfographic_svg__a)"
              >
                <mask
                  height="80"
                  id="userInfographic_svg__b"
                  maskUnits="userSpaceOnUse"
                  style="mask-type: alpha;"
                  width="80"
                  x="0"
                  y="0"
                >
                  <ellipse
                    fill="#C4C4C4"
                    rx="39.978"
                    ry="40"
                    transform="matrix(1 0 .00055 1 40 40)"
                  />
                </mask>
                <g
                  mask="url(#userInfographic_svg__b)"
                >
                  <path
                    d="M0 0h79.956v80H0V0Z"
                    fill="#d8dee4"
                  />
                  <path
                    d="M19.99 75.5c0-8.423 6.595-13.399 10.468-16.97 3.154-2.907 9.8-4.333 11.197-3.81 2.514-3.312 5.728-6.72 5.728-6.72s5.71 1.059 9.216 6.563a.25.25 0 0 1 .026-.033c.786-.843 2.684-.324 6.944 1.438 4.73 1.956 6.564 5.617 8.197 8.876.389.777.766 1.53 1.169 2.233a84.494 84.494 0 0 0 2.024 3.345 38.902 38.902 0 0 1-25.886 11.532c-10.753.516-21.698.232-29.084-6.454Z"
                    fill="#798da1"
                  />
                  <path
                    d="M32.452 80c-.835-.281-1.658-.172-2.468-.5 1.499-5 5.497-10.5 5.497-10.5s-2.896 6.5-3.029 11ZM67.963 74.133c-.707.378-1.427.737-2.16 1.078-.678-4.289-2.358-8.286-2.358-8.286s2.47 3.707 4.518 7.208ZM50.459 60.541c4.363-.194 7.765-2.932 7.598-6.116-.166-3.184-3.837-5.608-8.2-5.414-4.363.194-8.046 2.805-7.88 5.989.166 3.184 4.12 5.735 8.482 5.541Z"
                    fill="#9faebc"
                  />
                </g>
                <path
                  d="M29.013 32.248c-.97 1.04-1.54 2.5-1.464 4.09.144 2.992 2.524 5.308 5.315 5.173.108-.005.216-.014.323-.026 2.107 6.702 6.8 15.136 17.039 14.642 11.387-.548 15.634-9.085 16.97-16.618 2.465-.464 4.272-2.83 4.14-5.584a5.65 5.65 0 0 0-1.241-3.294c-.668 1.574-2.454.939-3.097-.577-.543-1.28-.63-2.62-.715-3.966-.114-1.765-.227-3.538-1.376-5.191-3.43-4.933-6.214-4.247-10.644-3.156-1.512.372-3.216.791-5.203 1.05-6.109.798-12.218-2.375-12.218-2.375s-4.377 6.35-3.714 16.312c.153 2.309-2.752 2.387-4.115-.48Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M40.72 26.582c-.5.083-1.096.181-1.069-.298.189-3.32 7.522-2.032 6.477-.092-.218.404-.763.127-1.337-.166-.395-.202-.805-.41-1.13-.408-1.363.013-1.76.314-2.115.581-.217.164-.418.316-.814.381l-.013.002ZM59.002 24.506c1.147-.127 2.804.276 3.305 1.213.25.47.039.637-.58.81-.53.15-.881-.042-1.265-.251a5.365 5.365 0 0 0-.356-.183 2.998 2.998 0 0 0-1.49-.245c-.298.027-.498.11-.713.2a3.39 3.39 0 0 1-.579.195c-.35.08-.802.135-.823-.166-.07-.985 1.54-1.466 2.5-1.573ZM60.685 28.792a1.736 1.736 0 0 0-.264-.123c-3.074-1.13-4.118 3.745-1.873 4.536 3.24 1.142 4.062-3.313 2.137-4.413ZM43.452 28.669c.093.034.18.075.264.123 1.924 1.1 1.102 5.555-2.138 4.413-2.244-.791-1.201-5.665 1.874-4.536Z"
                  fill="#506478"
                />
                <path
                  d="M60.306 29.332c-.341-.324-.99-.036-.898.404.047.225.092.404.3.557.316.234.95-.04.924-.412-.017-.243-.149-.38-.326-.55Z"
                  fill="#fff"
                />
                <path
                  d="M42.99 44.254s7.57 4.518 13.34 1.19c-3.13 4.518-11.581 3.826-13.34-1.19Z"
                  fill="#506478"
                />
                <path
                  d="M43.336 29.332c-.341-.324-.99-.036-.898.404.048.224.093.404.3.557.316.234.95-.04.924-.413-.017-.242-.149-.38-.326-.548Z"
                  fill="#fff"
                />
                <path
                  d="M33.646 8.329C37.884 2.193 46.823.762 54.908 2.278c4.577.858 19.606 6.05 15.308 14.859.25 2.639.392 5.3.394 7.952.002 1.685.033 3.496-.383 5.143-.522 2.064-2.538 1.453-3.23-.178-1.255-2.961-.066-6.245-2.09-9.157-4.6-6.617-8.041-3.124-15.847-2.106-6.11.797-12.218-2.375-12.218-2.375s-4.377 6.35-3.715 16.311c.21 3.143-5.247 2.153-4.77-4.768.477-6.92-1.175-19.01 5.289-19.63Z"
                  fill="#506478"
                />
                <path
                  d="M33.51 59.2a19.595 19.595 0 0 1-2.774-.664c-6.439-2.063-10.15-7.283-11.459-14.063-.124-.642-1.044-.626-1.146.02-1.245 7.927-5.753 13.596-13.67 15.224-.63.13-.613 1.049.021 1.156 7.895 1.333 12.678 6.829 14.194 14.645.095.492.611.485.582.474a.584.584 0 0 0 .564-.496c.631-4.055 2.506-9.582 7.854-12.883 1.709-1.053 3.679-1.813 5.855-2.257a.586.586 0 0 0 .467-.587.587.587 0 0 0-.488-.57Z"
                  fill="#7e9bfa"
                />
                <path
                  d="M26.327 24.799a6.19 6.19 0 0 1-.869-.206c-2.018-.64-3.18-2.26-3.59-4.364-.04-.2-.328-.194-.36.006-.39 2.46-1.804 4.22-4.285 4.726-.197.04-.192.326.006.359 2.475.413 3.973 2.119 4.448 4.545.03.152.192.15.183.147a.182.182 0 0 0 .176-.154c.198-1.259.786-2.974 2.463-4a5.657 5.657 0 0 1 1.835-.7.182.182 0 0 0-.007-.359Z"
                  fill="#798da1"
                />
                <path
                  d="M18.64 34.484a9.707 9.707 0 0 1-1.362-.323c-3.165-1.004-4.989-3.544-5.632-6.845-.06-.312-.513-.304-.563.01-.613 3.859-2.83 6.62-6.721 7.412-.31.063-.302.51.01.563 3.88.648 6.231 3.323 6.976 7.128.047.24.3.236.286.23a.286.286 0 0 0 .277-.24c.31-1.975 1.233-4.665 3.862-6.273.84-.513 1.808-.883 2.878-1.099a.286.286 0 0 0-.01-.563Z"
                  fill="#fff"
                />
              </g>
              <defs>
                <clippath
                  id="userInfographic_svg__a"
                >
                  <path
                    d="M0 0h80v80H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            In addition we have provided comprehensive documentation on using the AppMarket at the below link.
          </mock-styled.p>
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            View Docs
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.div
            classname="el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mb11"
          >
            <mock-styled.span
              classname="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.input
              placeholder="Search by App or Developer"
              type="text"
            />
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#userInfographic_svg__a)"
            >
              <mask
                height="80"
                id="userInfographic_svg__b"
                maskUnits="userSpaceOnUse"
                style="mask-type: alpha;"
                width="80"
                x="0"
                y="0"
              >
                <ellipse
                  fill="#C4C4C4"
                  rx="39.978"
                  ry="40"
                  transform="matrix(1 0 .00055 1 40 40)"
                />
              </mask>
              <g
                mask="url(#userInfographic_svg__b)"
              >
                <path
                  d="M0 0h79.956v80H0V0Z"
                  fill="#d8dee4"
                />
                <path
                  d="M19.99 75.5c0-8.423 6.595-13.399 10.468-16.97 3.154-2.907 9.8-4.333 11.197-3.81 2.514-3.312 5.728-6.72 5.728-6.72s5.71 1.059 9.216 6.563a.25.25 0 0 1 .026-.033c.786-.843 2.684-.324 6.944 1.438 4.73 1.956 6.564 5.617 8.197 8.876.389.777.766 1.53 1.169 2.233a84.494 84.494 0 0 0 2.024 3.345 38.902 38.902 0 0 1-25.886 11.532c-10.753.516-21.698.232-29.084-6.454Z"
                  fill="#798da1"
                />
                <path
                  d="M32.452 80c-.835-.281-1.658-.172-2.468-.5 1.499-5 5.497-10.5 5.497-10.5s-2.896 6.5-3.029 11ZM67.963 74.133c-.707.378-1.427.737-2.16 1.078-.678-4.289-2.358-8.286-2.358-8.286s2.47 3.707 4.518 7.208ZM50.459 60.541c4.363-.194 7.765-2.932 7.598-6.116-.166-3.184-3.837-5.608-8.2-5.414-4.363.194-8.046 2.805-7.88 5.989.166 3.184 4.12 5.735 8.482 5.541Z"
                  fill="#9faebc"
                />
              </g>
              <path
                d="M29.013 32.248c-.97 1.04-1.54 2.5-1.464 4.09.144 2.992 2.524 5.308 5.315 5.173.108-.005.216-.014.323-.026 2.107 6.702 6.8 15.136 17.039 14.642 11.387-.548 15.634-9.085 16.97-16.618 2.465-.464 4.272-2.83 4.14-5.584a5.65 5.65 0 0 0-1.241-3.294c-.668 1.574-2.454.939-3.097-.577-.543-1.28-.63-2.62-.715-3.966-.114-1.765-.227-3.538-1.376-5.191-3.43-4.933-6.214-4.247-10.644-3.156-1.512.372-3.216.791-5.203 1.05-6.109.798-12.218-2.375-12.218-2.375s-4.377 6.35-3.714 16.312c.153 2.309-2.752 2.387-4.115-.48Z"
                fill="#FFE5C7"
              />
              <path
                d="M40.72 26.582c-.5.083-1.096.181-1.069-.298.189-3.32 7.522-2.032 6.477-.092-.218.404-.763.127-1.337-.166-.395-.202-.805-.41-1.13-.408-1.363.013-1.76.314-2.115.581-.217.164-.418.316-.814.381l-.013.002ZM59.002 24.506c1.147-.127 2.804.276 3.305 1.213.25.47.039.637-.58.81-.53.15-.881-.042-1.265-.251a5.365 5.365 0 0 0-.356-.183 2.998 2.998 0 0 0-1.49-.245c-.298.027-.498.11-.713.2a3.39 3.39 0 0 1-.579.195c-.35.08-.802.135-.823-.166-.07-.985 1.54-1.466 2.5-1.573ZM60.685 28.792a1.736 1.736 0 0 0-.264-.123c-3.074-1.13-4.118 3.745-1.873 4.536 3.24 1.142 4.062-3.313 2.137-4.413ZM43.452 28.669c.093.034.18.075.264.123 1.924 1.1 1.102 5.555-2.138 4.413-2.244-.791-1.201-5.665 1.874-4.536Z"
                fill="#506478"
              />
              <path
                d="M60.306 29.332c-.341-.324-.99-.036-.898.404.047.225.092.404.3.557.316.234.95-.04.924-.412-.017-.243-.149-.38-.326-.55Z"
                fill="#fff"
              />
              <path
                d="M42.99 44.254s7.57 4.518 13.34 1.19c-3.13 4.518-11.581 3.826-13.34-1.19Z"
                fill="#506478"
              />
              <path
                d="M43.336 29.332c-.341-.324-.99-.036-.898.404.048.224.093.404.3.557.316.234.95-.04.924-.413-.017-.242-.149-.38-.326-.548Z"
                fill="#fff"
              />
              <path
                d="M33.646 8.329C37.884 2.193 46.823.762 54.908 2.278c4.577.858 19.606 6.05 15.308 14.859.25 2.639.392 5.3.394 7.952.002 1.685.033 3.496-.383 5.143-.522 2.064-2.538 1.453-3.23-.178-1.255-2.961-.066-6.245-2.09-9.157-4.6-6.617-8.041-3.124-15.847-2.106-6.11.797-12.218-2.375-12.218-2.375s-4.377 6.35-3.715 16.311c.21 3.143-5.247 2.153-4.77-4.768.477-6.92-1.175-19.01 5.289-19.63Z"
                fill="#506478"
              />
              <path
                d="M33.51 59.2a19.595 19.595 0 0 1-2.774-.664c-6.439-2.063-10.15-7.283-11.459-14.063-.124-.642-1.044-.626-1.146.02-1.245 7.927-5.753 13.596-13.67 15.224-.63.13-.613 1.049.021 1.156 7.895 1.333 12.678 6.829 14.194 14.645.095.492.611.485.582.474a.584.584 0 0 0 .564-.496c.631-4.055 2.506-9.582 7.854-12.883 1.709-1.053 3.679-1.813 5.855-2.257a.586.586 0 0 0 .467-.587.587.587 0 0 0-.488-.57Z"
                fill="#7e9bfa"
              />
              <path
                d="M26.327 24.799a6.19 6.19 0 0 1-.869-.206c-2.018-.64-3.18-2.26-3.59-4.364-.04-.2-.328-.194-.36.006-.39 2.46-1.804 4.22-4.285 4.726-.197.04-.192.326.006.359 2.475.413 3.973 2.119 4.448 4.545.03.152.192.15.183.147a.182.182 0 0 0 .176-.154c.198-1.259.786-2.974 2.463-4a5.657 5.657 0 0 1 1.835-.7.182.182 0 0 0-.007-.359Z"
                fill="#798da1"
              />
              <path
                d="M18.64 34.484a9.707 9.707 0 0 1-1.362-.323c-3.165-1.004-4.989-3.544-5.632-6.845-.06-.312-.513-.304-.563.01-.613 3.859-2.83 6.62-6.721 7.412-.31.063-.302.51.01.563 3.88.648 6.231 3.323 6.976 7.128.047.24.3.236.286.23a.286.286 0 0 0 .277-.24c.31-1.975 1.233-4.665 3.862-6.273.84-.513 1.808-.883 2.878-1.099a.286.286 0 0 0-.01-.563Z"
                fill="#fff"
              />
            </g>
            <defs>
              <clippath
                id="userInfographic_svg__a"
              >
                <path
                  d="M0 0h80v80H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          In addition we have provided comprehensive documentation on using the AppMarket at the below link.
        </mock-styled.p>
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          View Docs
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.div
          classname="el-flex-align-center mock-css.
  width: 100%;

  , {
    margin-bottom: 2.5rem;
    width: 50%;
  }

  , {
    width: 33.33%;
  }

  , {
    width: 25%;
  }
 el-mb11"
        >
          <mock-styled.span
            classname="mock-css.
  border-radius: 0.125rem 0 0 0.125rem;
  padding: 0 0.5rem 0 1.25rem;
  height: 2.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--color-grey-150);
  border-right: none;

  &:has(+ input:focus) {
    border: 1px solid var(--intent-primary);
    border-right: none;
  }
 el-intent-default el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.input
            placeholder="Search by App or Developer"
            type="text"
          />
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
